# scope-recall-hermes

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  aliases.py  artifacts.py  candidate_promotion.py  capture.py  capture_filters.py  capture_llm.py  cli.py  config.json  config.py  config_schema.py  digest_quality.py  digest_run_results.py  doctor_common.py  doctor_experience.py  doctor_journal.py  doctor_source.py  doctor_sqlite.py  doctor_vector.py  embedders.py  experience_bootstrap.py  experience_classification.py  experience_models.py  experience_preflight.py  experience_promotion.py  experience_replay.py  experience_store.py  forgetting.py  freshness.py  gating.py  governance.py  (+41 more)
.github/workflows/: ci.yml  pypi.yml  release.yml
benchmarks/: experience_replay_cases.json  golden_recall_cases.json
docs/: benchmark.golden.md  configuration.md  contract.matrix.md  cross-profile-rollout.md  differences-from-memory-lancedb-pro.md  experience.kernel.md  external-shared-memory.md  governance.cleanup.md  hermes-upstream-recommendation-plan.md  memory.stack.contract.md  migration.md  naming.md  operator-runbook.md  release-readiness.1.4.0.md  release-readiness.1.6.0.md  release-readiness.1.6.1.md  response-contracts.md  stability.md  upstream-recommendation.md
docs/plans/: 2026.05.17.memory.quality.refactor.md  2026.06.16.experience.kernel.plan.md  2026.06.17.auto.experience.and.forgetting.plan.md
examples/external_bridge/: conflict_resolution.jsonl  export.jsonl  import.jsonl
scripts/: backfill.graph_relations.py  benchmark.golden.py  benchmark.graph_relations.py  benchmark.retrieval_regression.py  check.release.py  doctor.py  experience-replay.py  governance.audit_coverage.py  governance.cleanup.py  import.openclaw.memory_lancedb_pro.py  journal.recovery.py  migrate.status.py  playbook.bootstrap.py  playbooks.py  promote.memory_candidates.py  repair.graph_hygiene.py  repair.vector_index.py  report.dashboard.py  report.hygiene.py  rollout.profiles.py
tests/: conftest.py  test_audit_regressions.py  test_benchmark_regression_cases.py  test_capture_filters.py  test_capture_llm_manual.py  test_config_schema.py  test_conflict_governance.py  test_dashboard.py  test_digest_run_results.py  test_doctor_experience.py  test_doctor_journal_health.py  test_doctor_modularization.py  test_doctor_secret_scan.py  test_doctor_sqlite_readonly.py  test_embedders.py  test_entity_graph_hygiene.py  test_experience_bootstrap.py  test_experience_config_defaults.py  test_experience_preflight.py  test_experience_promotion.py  test_experience_replay.py  test_experience_schema.py  test_experience_store.py  test_experience_tools.py  test_external_shared_memory_examples.py  test_fact_freshness.py  test_forgetting.py  test_golden_benchmark.py  test_governance_cleanup.py  test_governance_contract_regressions.py  test_graph_hygiene.py  test_graph_relation_backfill.py  test_graph_relation_benchmark.py  test_hygiene.py  test_installer.py  test_journal_candidates.py  test_journal_digest.py  test_journal_extractors.py  test_journal_llm.py  test_journal_recovery.py  (+38 more)
