[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-recall"
version = "1.0.15"
description = "Hermes scoped memory provider with journal-first capture, SQLite truth, vector companions, and hybrid RRF retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "scope-recall contributors" }
]
keywords = ["hermes", "memory", "sqlite", "lancedb", "plugin", "vector"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
lancedb = [
  "lancedb>=0.30.2",
  "pyarrow>=24,<25",
]
all = [
  "lancedb>=0.30.2",
  "pyarrow>=24,<25",
]
dev = [
  "pytest",
  "ruff",
  "wheel",
]

[project.urls]
Homepage = "https://github.com/410979729/scope-recall-hermes"
Documentation = "https://github.com/410979729/scope-recall-hermes#readme"
Issues = "https://github.com/410979729/scope-recall-hermes/issues"

[tool.setuptools]
include-package-data = true
packages = ["scope_recall"]
package-dir = {"scope_recall" = "."}

[tool.setuptools.package-data]
"scope_recall" = ["py.typed"]

[tool.setuptools.data-files]
"" = ["plugin.yaml", "config.json", "README.md", "DESIGN.md", "CHANGELOG.md", "CONTRIBUTING.md", ".env.example"]
"docs" = ["docs/*.md", "SECURITY.md"]
"scripts" = ["scripts/*.py"]
".github/workflows" = [".github/workflows/*.yml"]

[tool.pytest.ini_options]
pythonpath = ["."]
