[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-scope-recall"
version = "1.5.2"
description = "Hermes scoped memory provider with journal-first capture, SQLite truth, vector companions, and hybrid RRF retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "scope-recall contributors" }
]
keywords = ["hermes", "memory", "sqlite", "lancedb", "plugin", "vector"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
hermes-scope-recall = "scope_recall.installer:main"

[project.optional-dependencies]
lancedb = [
  "lancedb>=0.30.2",
  "pyarrow>=24,<25",
]
all = [
  "lancedb>=0.30.2",
  "pyarrow>=24,<25",
]
dev = [
  "pytest",
  "ruff",
  "wheel",
  "pyright",
]

[project.urls]
Homepage = "https://github.com/410979729/scope-recall-hermes"
Documentation = "https://github.com/410979729/scope-recall-hermes#readme"
Issues = "https://github.com/410979729/scope-recall-hermes/issues"

[tool.setuptools]
include-package-data = true
packages = ["scope_recall"]
package-dir = {"scope_recall" = "."}

[tool.setuptools.package-data]
"scope_recall" = [
  "py.typed",
  "pyproject.toml",
  "plugin.yaml",
  "config.json",
  "README.md",
  "DESIGN.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "SECURITY.md",
  "MANIFEST.in",
  ".env.example",
  "docs/*.md",
  "scripts/*.py",
  "benchmarks/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
include = [
  "config.py",
  "embedders.py",
  "graph.py",
  "memory_ops.py",
  "recall.py",
  "schemas.py",
  "scoring.py",
  "sqlite_vector_store.py",
  "sql_store.py",
  "storage_views.py",
  "tooling.py",
  "vector_runtime.py",
]
exclude = [
  ".git",
  ".hermes",
  ".hermes-agent-src",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "scripts",
  "tests",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
