[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-scope-recall"
version = "1.6.0"
description = "Hermes scoped memory provider with journal-first capture, SQLite truth, vector companions, and hybrid RRF retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "scope-recall contributors" }
]
keywords = ["hermes", "memory", "sqlite", "lancedb", "plugin", "vector"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
hermes-scope-recall = "scope_recall.cli:main"

[project.optional-dependencies]
lancedb = [
  "lancedb>=0.30.2",
  "pyarrow>=24,<25",
]
all = [
  "lancedb>=0.30.2",
  "pyarrow>=24,<25",
]
dev = [
  "pytest",
  "ruff",
  "wheel",
  "pyright",
]

[project.urls]
Homepage = "https://github.com/410979729/scope-recall-hermes"
Documentation = "https://github.com/410979729/scope-recall-hermes#readme"
Issues = "https://github.com/410979729/scope-recall-hermes/issues"

[tool.setuptools]
include-package-data = true
packages = ["scope_recall"]
package-dir = {"scope_recall" = "."}

[tool.setuptools.package-data]
"scope_recall" = [
  "py.typed",
  "pyproject.toml",
  "plugin.yaml",
  "config.json",
  "README.md",
  "DESIGN.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "SECURITY.md",
  "MANIFEST.in",
  ".env.example",
  "docs/*.md",
  "scripts/*.py",
  "benchmarks/*.json",
  "examples/external_bridge/*.jsonl",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
include = [
  "candidate_promotion.py",
  "cli.py",
  "config.py",
  "config_schema.py",
  "digest_quality.py",
  "digest_run_results.py",
  "doctor_common.py",
  "doctor_experience.py",
  "doctor_journal.py",
  "doctor_source.py",
  "doctor_sqlite.py",
  "doctor_vector.py",
  "embedders.py",
  "experience_bootstrap.py",
  "experience_classification.py",
  "experience_replay.py",
  "freshness.py",
  "graph_hygiene.py",
  "maintenance_ops.py",
  "graph.py",
  "journal_llm.py",
  "journal_store.py",
  "journal_candidates.py",
  "journal_extractors.py",
  "memory_ops.py",
  "memory_quality.py",
  "migration_openclaw.py",
  "nightly_llm.py",
  "provider_schemas.py",
  "recall.py",
  "recall_pipeline.py",
  "relation_extraction.py",
  "response_schemas.py",
  "schemas.py",
  "scoring.py",
  "sqlite_vector_store.py",
  "sql_store.py",
  "storage_views.py",
  "tooling.py",
  "vector_runtime.py",
]
exclude = [
  ".git",
  ".hermes",
  ".hermes-agent-src",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "scripts",
  "tests",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
